--- a/styles/omma-imagens.css
+++ b/styles/omma-imagens.css
@@ -141,3 +141,18 @@ h1{
     text-transform: lowercase;
     color: #000000;
 }
+
+@media only screen and (max-width: 600px) {
+    h1 {
+        font-size: 25px;
+        margin-left: 36px;
+    }
+    .lista-itens{
+        flex-basis: 100%;
+        margin-top: 0;
+    }
+    .lista-itens > img{
+        width: 300px;
+        height: 300px;
+    }
+}
